# GridAIBot

./: .env.example  .gitignore  README.md  ai_trading.service  config.py  discord_bot.py  okx_queries.py  pyproject.toml  run_ai_trading_daemon.sh  update.ps1
cogs/: __init__.py  ai_chat.py  balance.py  grid.py  martingale.py  news.py  position.py
data/: task.json
data/tasks/: 01f6257a-5867-4db7-a027-c4b71cc260aa.py  f6fe78ef-c060-40ea-8b57-81f70346d410.py
deploy/: README.md  deploy.sh  gridaibot.service  install.sh
okx_api/: __init__.py  client.py  queries.py  tools.py
services/: __init__.py  ai_service.py  rss_service.py  scheduler_service.py
tools/: __init__.py  okx_tools.py
webhook/: ai_trading.py  config.env.example  config.py
webhook/trading_analysis/: analysis_history.json
